--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head><link rel="stylesheet" href="site criativo">
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>vai ser uma imagem aqui</h1>
+    <header>
+        <h1>CURIOSIDADES SOBRE O CORPO HUMANO</h1>
+        <img class= "cabecalho"src="" alt="">partesdocorpo.webp
+        <ul>
+            <li>Escola</li>
+            <li>Estudante</li>
+        </ul>
+    </header> class
 
-</body><ul>
-    <li>curiosidades sobre o corpo humano
-        
-    
-
-</ul>
+</body>
+</html>
